--- a/code/src/index.css
+++ b/code/src/index.css
@@ -13,20 +13,23 @@ code {
     monospace;
 }
 
-h1 {
-  color: #ffadad;
-  font-size: 22px;
-  display: block;
-  width: fit-content;
-  margin: 10px auto 30px;
-  text-transform: uppercase;
-}
+@import url("https://fonts.googleapis.com/css2?family=Trispace&display=swap");
 
 p {
   margin: 10px auto;
   max-width: 80%;
   color: #000;
   font-size: 14px;
+  font-family: "Trispace", sans-serif;
+  font-weight: 500;
+}
+
+.messageText {
+  margin: 30px auto 0;
+  max-width: 90%;
+  color: #000;
+  font-size: 12px;
+  font-family: "Trispace", sans-serif;
   font-weight: 500;
 }
 
@@ -40,74 +43,89 @@ p {
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  width: 280px;
-  height: fit-content;
+  width: 320px;
+  height: 150px;
   border: 1px solid black;
   box-shadow: 4px 6px black;
-  margin: 12px auto;
+  margin: 10px auto;
+}
+
+.likesWrapper {
+  width: 290px;
+  display: flex;
+  flex-direction: row;
+  margin: auto;
+  justify-content: space-between;
+}
+
+.hearts {
+  font-size: 12px;
+  background-color: #ffadad;
+  border: none;
+  padding: 10px;
+  border-radius: 30px;
+  cursor: cell;
+}
+
+.numberOfLikes {
+  font-family: "Trispace", sans-serif;
+  font-size: 10px;
+  font-weight: 400;
+}
+
+.date {
+  font-size: 12px;
+  font-family: "Trispace", sans-serif;
+  color: #818080;
 }
 
 .newThoughtWrapper {
   background-color: #f2f0f0;
-  color: lightyellow;
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  width: 280px;
+  width: 320px;
   height: fit-content;
-  margin: 30px auto 20px;
+  margin: 20px auto;
   border: 1px solid #000;
   box-shadow: 5px 5px black;
 }
 
 .newThoughtWrapper label {
+  font-family: "Trispace", sans-serif;
   font-size: 14px;
   font-weight: 500;
   color: #000;
-  margin: 10px auto 15px;
+  margin: 20px auto 15px;
 }
 
 textarea {
-  width: 200px;
+  font-family: "Trispace", sans-serif;
+  width: 250px;
   height: 50px;
-  margin: 10px auto 0;
-  font-size: 14px;
-  border: 1px solid #fff;
-  border-radius: 5px;
+  margin: 10px auto;
+  font-size: 12px;
+  border: 1px solid #ffadad;
+  border-radius: 2px;
   cursor: text;
   caret-color: #ffadad;
 }
 
-.hearts {
-  display: inline-block;
+.charactersLeft {
   font-size: 12px;
-  background-color: #ffadad;
-  border: none;
-  padding: 10px;
-  border-radius: 50%;
-  cursor: cell;
-}
-
-.numberOfLikes {
-  display: inline-block;
-  font-size: 10px;
-  font-weight: 400;
 }
 
 .sendThought {
   font-size: 12px;
+  font-family: "Trispace", sans-serif;
   background-color: #ffadad;
   color: #000;
   border: none;
   padding: 10px;
-  border-radius: 25px;
+  border-radius: 30px;
   margin: 15px auto;
   cursor: cell;
-}
-
-.date {
-  font-style: italic;
 }
 
 /* MEDIA QUERIES */
@@ -120,20 +138,20 @@ textarea {
     margin: 50px auto;
   }
   .container {
-    width: 500px;
+    width: 400px;
     align-items: center;
   }
 
   .newThoughtWrapper {
-    width: 500px;
-    height: 200px;
-    margin: auto;
+    width: 400px;
+    height: 250px;
+    margin: 40px auto 30px;
     align-items: center;
   }
 
   .thoughtWrapper {
-    width: 500px;
-    height: 200px;
-    margin: 30px auto 10px;
+    width: 400px;
+    height: 150px;
+    margin: 10px auto;
   }
 }
