--- a/code/src/index.css
+++ b/code/src/index.css
@@ -1,17 +1,79 @@
+* {
+  box-sizing: border-box;
+}
+
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
-    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
+    Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
-    monospace;
+.question-card {
+  display: flex;
+  flex-direction: column;
+  border: 1px solid black;
+  box-shadow: 5px 10px;
+  width: 500px;
+  margin: 20px auto 0 auto;
+  background-color: rgb(237, 237, 237);
 }
 
-.date{
-  
+.question {
+  margin: 60px 0 0 20px;
+  font-weight: 300;
+  font-size: 24px;
+  padding-top: 20px;
+}
+
+.submit-btn {
+  width: 250px;
+  border-radius: 30px;
+  border: none;
+  background-color: rgb(228, 169, 165);
+  padding: 10px 0;
+  margin: 20px;
+}
+
+.icon-btn {
+  color: red;
+  padding: 0 10px;
+  font-size: 24px;
+}
+
+input {
+  padding: 10px;
+  padding-bottom: 40px;
+  margin: 20px;
+  width: 90%;
+  background-color: white;
+}
+
+.answer-card {
+  display: flex;
+  flex-direction: column;
+  border: 1px solid black;
+  width: 500px;
+  margin: 20px auto 0 auto;
+  background-color: white;
+
+  box-shadow: 5px 10px;
+}
+
+.answer {
+  margin-left: 20px;
+}
+
+.heart-btn {
+  background-color: white;
+  border: none;
+  color: grey;
+}
+
+.heart {
+  width: 50px;
+  color: red;
+  background-color: rgb(237, 237, 237);
+  border-radius: 50%;
+  padding: 10px;
+  font-size: 20px;
 }
