--- a/code/src/index.css
+++ b/code/src/index.css
@@ -1,13 +1,116 @@
 body {
-  margin: 10px;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  margin: 15px;
+  font-family: 'Roboto', sans-serif;
+  font-family: 'Roboto Mono', monospace;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+h1 {
+  font-size: 30px;
+  font-weight: 600;
+  text-align: center;
+  margin-top: 3vh;
+}
+
+.thoughts-container {
+  display: flex;
+  flex-direction: column;
+  gap: 25px;
+  align-items: center;
+}
+
+.form-container {
+  box-sizing: border-box;
+  background-color: rgb(243, 243, 243, 0.81);
+  border: 2px solid black;
+  box-shadow: 5px 5px;
+  padding: 10px 14px;
+  height: 160px;
+  display: flex;
+  justify-content: space-around;
+  flex-direction: column;
+  font-family: 'Roboto';
+  font-weight: 500;
+  font-size: 14px;
+  width: 90%;
+}
+
+.text-input {
+  padding: 5px;
+  resize: none;
+}
+
+.share-button {
+  background-color: rgb(223, 105, 64, 0.49);
+  font-family: 'Roboto';
+  font-weight: 600;
+  font-size: 13px;
+  padding: 7px 5px;
+  width: 180px;
+  border: 0px;
+  border-radius: 35px;
+  cursor: pointer;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: space-around;
+}
+
+.btn-heart {
+  width: 22px;
+  height: 22px;
+  display: flex;
+  justify-content: center;
+}
+
+.thought-card {
+  box-sizing: border-box;
+  border: 2px solid black;
+  box-shadow: 5px 5px;
+  padding: 10px 14px;
+  height: 135px;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+  width: 90%;
+}
+
+.thought-card-info {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+}
+
+.thought-text {
+  font-size: 15.5px;
+  font-weight: 600;
+}
+
+.like-info {
+  display: flex;
+  flex-direction: row;
+  gap: 7px;
+  align-items: center;
+}
+
+.like-button {
+  border: 0px;
+  height: 40px;
+  width: 40px;
+  border-radius: 50%;
+  background-color: rgb(239, 239, 239);
+}
+
+.like-heart {
+  height: 22px;
+  width: 22px;
+  display: flex;
+  justify-content: center;
+}
+
+.thought-card-info > p,
+.like-info > p {
+  font-family: 'Roboto';
+  font-size: 14px;
+  font-weight: 400;
+  color: rgb(160, 156, 156);
 }
