--- a/code/src/index.css
+++ b/code/src/index.css
@@ -1,5 +1,5 @@
 body {
-  margin: 10px;
+  margin: 20px;
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
     "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
     sans-serif;
@@ -55,11 +55,12 @@ button {
 
 .form {
   display: flex;
+  align-items: left;
   flex-direction: column;
   width: 300px;
   height: 150px;
   background-color: rgb(242, 240, 240);
-  padding: 1rem;
+  /* padding: 1rem 1rem 1 rem 1 rem; */
   border: 1px solid rgb(2, 2, 2);
   box-shadow: 7px 7px rgb(2, 2, 2);
 
@@ -70,12 +71,14 @@ button {
 .thoughts {
   display: flex;
   flex-direction: column;
-  width: 330px;
+  align-items: left;
+  width: 300px;
   border: 1px solid #333;
   margin-bottom: 1rem;
   height: 140px;
   border: 1px solid rgb(63, 62, 62);
   box-shadow: 7px 7px rgb(63, 62, 62);
+  padding: 20px;
 }
 
 .btn-heart {
