--- a/code/src/index.css
+++ b/code/src/index.css
@@ -1,7 +1,7 @@
 :root {
   --highlight: rgb(208, 51, 77);
-  --background-color: rgb(199, 199, 199);
-  --theme-color: rgb(179, 176, 176);
+  --background-color: rgb(245, 245, 245);
+  --theme-color: rgb(152, 151, 151);
   --font-color: #3e3c3c;
   --shadow: black;
   --fancy: rosybrown;
@@ -13,7 +13,54 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   color: var(--font-color);
-  font-family: "Roboto Mono";
+  font-family: "Fira Code", monospace;
+  background-color: var(--background-color);
+}
+
+.heading-container {
+  width: 100%;
+  height: 100%;
+  font-size: 16px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.heading {
+  cursor: pointer;
+  position: relative;
+  display: inline-block;
+  font-size: 24px;
+  background: linear-gradient(to bottom, #444, #444 60%, #fff 60%, #fff 100%);
+  background-clip: text;
+  -webkit-background-clip: text;
+  color: transparent;
+  background-repeat: no-repeat;
+  transition: background 0.2s ease-out;
+  white-space: nowrap;
+}
+
+.heading-style {
+  position: relative;
+}
+
+.heading-style:before {
+  content: "";
+  position: absolute;
+  left: 0;
+  right: 0;
+  height: 12px;
+  background: #444;
+  bottom: 25px;
+  transition: all 0.2s ease-out;
+}
+
+.heading-style:hover .heading {
+  background-position: 0 5px;
+}
+
+.heading-style:hover:before {
+  transform: translateY(5px);
 }
 
 .loading-screen {
@@ -39,12 +86,15 @@ button {
   border-radius: 50%;
 }
 
-.move {
+.move-btn {
   margin-left: -8px;
+  margin-bottom: 0;
+  margin-top: 10px;
 }
 
 .symbols-counter {
   font-size: 12px;
+  margin-top: 0;
 }
 
 .new-thought-container {
@@ -55,18 +105,42 @@ button {
   display: flex;
   flex-wrap: wrap;
   font-size: 14px;
+  margin-top: 12px;
 }
 
 .new-thought-space {
   margin: 10px;
 }
 
-@media (min-width: 768px) {
+.new-thought-card {
+  -webkit-box-shadow: 7px 7px 0px 1px rgba(0, 0, 0, 0.42);
+  box-shadow: 7px 7px 0px 1px rgba(0, 0, 0, 0.42);
+  border-radius: 2px;
+}
+
+textarea {
+  width: 316px;
+  height: 40px;
+  margin-top: 16px;
+  margin-left: -2px;
+  font-size: 16px;
+  border: 1px solid var(--theme-color);
+  outline: none;
+  color: var(--theme-color);
+  cursor: pointer;
+}
+
+textarea:focus {
+  border: 1px solid var(--theme-color);
+}
+
+@media (min-width: 767px) {
   .symbols-counter {
     font-size: 16px;
   }
   .new-thought-container {
     width: 550px;
+    padding: 18px;
   }
   .new-thought-label {
     display: flex;
@@ -76,11 +150,24 @@ button {
   .new-thought-space {
     margin: 40px;
   }
-}
+  textarea {
+    width: 540px;
+    height: 58px;
+    margin-top: 30px;
+    font-size: 18px;
+  }
+  .heading {
+    font-size: 3rem;
+  }
+  .heading-style:before {
+    bottom: 58px;
+    height: 15px;
+  }
+  .heading-style:hover .heading {
+    background-position: 0 11px;
+  }
 
-/* 
-textarea {
-  outline: none;
-  text-decoration: none;
-  color: var(--theme-color);
-} */
+  .heading-style:hover:before {
+    transform: translateY(10px);
+  }
+}
