--- a/code/src/index.css
+++ b/code/src/index.css
@@ -1,8 +1,6 @@
 body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
-    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
-    sans-serif;
+  margin: 15px;
+  font-family: "Roboto Mono", monospace;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
@@ -10,4 +8,23 @@ body {
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
+}
+
+.date {
+  text-align: end;
+}
+
+.form-wrapper {
+  border: 1px solid black;
+  padding: 25px;
+  background-color: #f2f0f0;
+}
+
+.form-button {
+  background-color: #ffadad;
+}
+
+.thought-wrapper {
+  border: 1px solid black;
+  margin: 20px;
 }
