--- a/code/src/index.css
+++ b/code/src/index.css
@@ -47,6 +47,7 @@ code {
 }
 button {
   -webkit-appearance: none;
+  -moz-appearance: none;
   border: none;
 }
 
@@ -54,7 +55,7 @@ button {
   border-radius: 100%;
   color: salmon;
   width: 40px;
-  height: 80px;
+  height: 20%;
 }
 
 .form {
@@ -82,7 +83,6 @@ button {
   height: 140px;
   border: 1px solid rgb(63, 62, 62);
   box-shadow: 7px 7px rgb(63, 62, 62);
-  padding: 20px;
 }
 
 .btn-heart {
