--- a/code/src/index.css
+++ b/code/src/index.css
@@ -13,13 +13,15 @@ code {
 }
 
 .p {
-  font-size: 14px;
+  font-size: 11px;
+  margin: 0;
 }
 
 .h3 {
   font-size: 12px;
 }
 
+/* send thought btn*/
 .send-btn {
   border-radius: 50%;
   width: 50%;
@@ -32,7 +34,7 @@ code {
   text-align: center;
   font-size: 10px;
 }
-
+/* red hearts in send thought btn*/
 .send-heart {
   color: rgb(255, 64, 50);
   margin-right: 5px;
@@ -52,10 +54,11 @@ button {
 }
 
 .btn {
+  display: inline-block;
   border-radius: 100%;
   color: salmon;
-  width: 40px;
-  height: 20%;
+  width: 10%;
+  height: 50%;
 }
 
 .form {
@@ -83,6 +86,15 @@ button {
   height: 140px;
   border: 1px solid rgb(63, 62, 62);
   box-shadow: 7px 7px rgb(63, 62, 62);
+}
+
+.thoughts-container {
+  display: flex;
+  flex-direction: row;
+}
+
+.thoughts-card {
+  margin: 20px;
 }
 
 .btn-heart {
