--- a/code/src/index.css
+++ b/code/src/index.css
@@ -49,6 +49,7 @@ code {
 .thought-input {
   height: 50px;
   width: 90%;
+  resize: none;
 }
 
 .thought-btn {
@@ -58,11 +59,18 @@ code {
   height: 38px;
   font-family: inherit;
   font-size: 16px;
+  
 }
 
 .heart-btn-loved:hover, .thought-btn:hover {
   background-color: rgb(255, 122, 122);
-  cursor: pointer;
+  /* cursor: pointer; */
+  cursor: url(https://cur.cursors-4u.net/symbols/sym-1/sym49.cur), auto;
+}
+
+.thought-btn:disabled {
+  cursor: not-allowed;
+  background-color: rgb(255, 173, 173)
 }
 
 .loading-container {
@@ -84,6 +92,12 @@ code {
   height: 450px;
   animation: spin 2s linear infinite;
 }
+
+.thought {
+  word-break: break-all;
+  white-space: normal;
+}
+
 
 .heart-time {
   display: flex;
@@ -118,7 +132,7 @@ code {
 
 .heart-btn-unloved:hover {
   background-color: rgb(165, 165, 165);
-  cursor: pointer;
+  cursor: url(https://cur.cursors-4u.net/symbols/sym-1/sym49.cur), auto;
 }
 
 @keyframes spin {
