--- a/code/src/components/ThoughtItem.css
+++ b/code/src/components/ThoughtItem.css
@@ -37,11 +37,17 @@
     height: 35px;
     width: 35px;
     transition: .2s;
-    box-shadow: 0px 2px 2px rgb(42, 45, 54);
+}
+
+.like-button:hover {
+    box-shadow: 0 0 10px rgba(42, 45, 54, 0.637);
 }
 
 .like-button:active {
-    box-shadow: 0 0 2px rgb(42, 45, 54);
+    -moz-transform: scale(0.98);
+    -webkit-transform: scale(0.98);
+    transform: scale(0.98);
+    box-shadow: 0 0 1px rgb(42, 45, 54);
 }
 
 .heart-icon {
