--- a/code/src/index.css
+++ b/code/src/index.css
@@ -1,10 +1,9 @@
+@import url("https://fonts.googleapis.com/css2?family=M+PLUS+Rounded+1c&display=swap");
+
 body {
-  margin: 10px;
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
-    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  margin: 0;
+  font-family: "M PLUS Rounded 1c", sans-serif;
+  font-size: 16px;
 }
 
 code {
@@ -47,4 +46,31 @@ code {
   100% {
     transform: rotate(360deg);
   }
+}
+
+.submit-btn {
+  font-family: inherit;
+  outline: none;
+  border: 1px solid transparent;
+  background: #ffadad;
+  height: 50px;
+  border-radius: 25px;
+  padding: 5px 15px;
+  font-size: inherit;
+  font-weight: 700;
+  cursor: pointer;
+}
+
+.thought-item {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  align-items: flex-start;
+  margin-top: 30px;
+  gap: 10px;
+  border: 2px solid;
+  box-shadow: 8px 8px 0;
+  padding: 20px;
+  word-break: break-word;
+  min-height: 100px;
 }
