--- a/code/src/index.css
+++ b/code/src/index.css
@@ -48,6 +48,41 @@ code {
   }
 }
 
+.all-thoughts-container {
+  max-width: 484px;
+  margin: 20px auto;
+  padding-bottom: 15px;
+  border: 1px solid #000;
+  box-shadow: 6px 6px 0px #000;
+  background-color: #fdb9b9;
+}
+.happy-form {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  margin-top: 40px;
+  gap: 10px;
+  border: 2px solid;
+  box-shadow: 8px 8px 0;
+  padding: 20px;
+  background-color: rgb(233, 231, 231);
+  max-width: 484px;
+  margin: 20px auto;
+}
+
+.newThought {
+  width: 97%;
+  margin-top: 10px;
+  height: 40px;
+  box-sizing: content-box;
+  outline: none;
+  padding-inline-start: 10px;
+  padding-top: 10px;
+  padding-bottom: 25px;
+  font-family: inherit;
+  font-size: inherit;
+}
+
 .submit-btn {
   font-family: inherit;
   outline: none;
@@ -64,13 +99,11 @@ code {
 .thought-item {
   display: flex;
   flex-direction: column;
-  justify-content: space-between;
-  align-items: flex-start;
-  margin-top: 30px;
-  gap: 10px;
-  border: 2px solid;
-  box-shadow: 8px 8px 0;
-  padding: 20px;
+  margin: 20px;
+  padding: 10px;
+  border: 1px solid #000;
+  box-shadow: 6px 6px 0px #000;
   word-break: break-word;
   min-height: 100px;
+  background-color: #ffe8e8;
 }
