--- a/code/src/index.css
+++ b/code/src/index.css
@@ -33,7 +33,6 @@ footer {
 }
 
 p {
-/* font-family: 'Inconsolata', monospace;; */
 font-family: "Courier New",
     monospace;
     margin: 10px;
@@ -132,7 +131,7 @@ margin: 0 auto;
   margin: 10px;
   color: #c4c1c1;
   font-family: Roboto;
-  /* Inte rätt */
+  /* Not really a perfect circle */
   grid-column: span 1;
   justify-self: center;
   align-self: center;
