--- a/code/src/index.css
+++ b/code/src/index.css
@@ -4,6 +4,7 @@ body {
   margin: 0;
   font-family: "M PLUS Rounded 1c", sans-serif;
   font-size: 16px;
+  background-color: #a899f8;
 }
 
 code {
@@ -54,7 +55,7 @@ code {
   padding-bottom: 15px;
   border: 1px solid #000;
   box-shadow: 6px 6px 0px #000;
-  background-color: #fdb9b9;
+  background-color: #d1b9fd;
 }
 .happy-form {
   display: flex;
