--- a/code/src/index.css
+++ b/code/src/index.css
@@ -1,13 +1,78 @@
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
-    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
-    sans-serif;
+  font-family: "Ubuntu Mono", "Courier New", monospace;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
-    monospace;
+.happy-thoughts-container {
+  width: 400px;
+  margin: 0 auto;
 }
+
+.happy-form,
+.happy-thought {
+  margin: 20px 0;
+  border: 1px solid #000;
+  padding: 15px;
+  box-shadow: #000 6px 6px;
+
+}
+
+.happy-form {
+  background-color: #d4d3d3;
+
+}
+
+.happy-form textarea {
+  width: 100%;
+  height: 60px;
+  margin: 10px 0;
+}
+
+button {
+  border-radius: 15px;
+  background-color: rgb(245, 169, 169);
+  border: none;
+  padding: 7px 12px;
+  font-family: "Ubuntu Mono", "Courier New", monospace;
+  cursor: pointer;
+
+}
+
+.happy-thought {
+  background-color: #FFF;
+}
+
+p.thought-message {
+  margin: 0 0 20px 0;
+}
+
+
+.thought-footer {
+  display: flex;
+  justify-content: space-between;
+  align-self: flex-end;
+  color: #d4d3d3;
+}
+
+.thought-heart {
+  display: flex;
+}
+
+.heart-emoji {
+  font-size: 18px;
+}
+
+.thought-heart button {
+  border-radius: 50%;
+  width: 50px;
+  height: 50px;
+  font-size: 18px;
+}
+
+.thought-heart-times {
+  align-self: center;
+  margin-left: 10px;
+}
+
